--- a/frontend/templates/recrutregform.html
+++ b/frontend/templates/recrutregform.html
@@ -10,11 +10,12 @@
 
 <h1>Добавить рекрута</h1>
 
-<form  action = "add-recrut/"  method = "post" >
+<form  action = "add/"  method = "post" >
     {%  csrf_token  %}
     {{  recrut_contact_form.as_p }}
     <input  type = "submit"  value = "Submit"  />
 </form>
+
 
 {% endblock %}
 
